syntax = "proto3";

package usermanagement;

service UserManagement{
    // Crear un nuevo usuario
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    // Obtener informaci√≥n de un usuario
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    // Actualizar un usuario
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
    // Eliminar un usuario
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

// Mensajes de solicitud y respuesta

message CreateUserRequest {
    string name = 1;
    string email = 2;
}

message CreateUserResponse {
    string user_id = 1;
    string name = 2;
    string email = 3;
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    string user_id = 1;
    string name = 2;
    string email = 3;
}

message UpdateUserRequest {
    string user_id = 1;
    string name = 2;
    string email = 3;
}

message UpdateUserResponse {
    string user_id = 1;
    string name = 2;
    string email = 3;
}

message DeleteUserRequest {
    string user_id = 1;
}

message DeleteUserResponse {
    string message = 1;
}
